apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'eclipse-wtp'
apply plugin: 'jetty'
apply plugin: 'checkstyle'

// JDK 8
sourceCompatibility = 1.8
targetCompatibility = 1.8

// encode
def defaultEncoding = 'UTF-8'
tasks.withType(AbstractCompile)*.options*.encoding = defaultEncoding
tasks.withType(GroovyCompile)*.groovyOptions*.encoding = defaultEncoding

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
 
 	// lombok
    compile "org.projectlombok:lombok:1.16.12"

	compile 'ch.qos.logback:logback-classic:1.1.3'
	compile 'javax.servlet:jstl:1.2'
	compile 'org.apache.tomcat:tomcat-jsp-api:8.0.37'
	
	// spring
	compile group: 'org.springframework', name: 'spring-webmvc', version: '4.1.6.RELEASE'
	compile group: 'org.springframework', name: 'spring-tx', version: '4.1.6.RELEASE'
	compile group: 'org.springframework', name: 'spring-orm', version: '4.1.6.RELEASE'
	compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '1.0.0.RELEASE'

	// hibernate
	compile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.11.Final'
	
    // JavaEE	
	compile group: 'javax', name: 'javaee-api', version: '7.0'
	
	// mysql
	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
	
	// test
	testCompile group: 'junit', name: 'junit', version: '4.12'
	testCompile group: 'org.jmockit', name: 'jmockit', version: '1.27'	
	testCompile group: 'org.springframework', name: 'spring-test', version: '4.1.6.RELEASE'
	
	// freemarker
	testCompile group: 'org.freemarker', name: 'freemarker', version: '2.3.23'
	
	// Apache Commons
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
	
}

// Embeded Jetty for testing
jettyRun{
	contextPath = "spring4"
	httpPort = 8080
}

jettyRunWar{
	contextPath = "spring4"
	httpPort = 8080
}

//For Eclipse IDE only
eclipse {

  wtp {
    component {
      //define context path, default to project folder name
      contextPath = 'spring4'
    }

    classpath {
        defaultOutputDir = file('src/main/webapp/WEB-INF/classes')
    }
  }
  
  classpath {
  	file {

  	  beforeMerged { classpath ->
  	    classpath.entries.removeAll { it.path == 'src/generator/java' }
  	    classpath.entries.removeAll { it.path == 'src/generator/resources' }
  	  }

  	  whenMerged { classpath ->
  	    def genSrc = new org.gradle.plugins.ide.eclipse.model.SourceFolder('src/generator/java', null)
  	    def genResources = new org.gradle.plugins.ide.eclipse.model.SourceFolder('src/generator/resources', null)
  	    classpath.entries.add(genSrc)
  	    classpath.entries.add(genResources)
  	  }

  	}
  }
}

eclipse.jdt.file {
	withProperties { properties ->
		def formatter = new XmlSlurper().parse(file('config/format/formatter.xml'))

		formatter.profile.setting.each {
			properties.put(it.@id as String, it.@value as String)
		}
	}
}
